--- a/client-extensions/raylife-custom-element/src/common/locale/en.json
+++ b/client-extensions/raylife-custom-element/src/common/locale/en.json
@@ -22,6 +22,44 @@
       "purchase-this-policy": "PURCHASE THIS POLICY",
       "policy-details": "Policy Details",
       "per-month": "/mo",
-      "changes-may-not-be-saved-warning": "Changes you made may not be saved."
+      "changes-may-not-be-saved-warning": "Changes you made may not be saved.",
+      "street-address": "Street address",
+      "business-address-validation": "Business address is required.",
+      "address-apt": "Apt/Suite (optional)",
+      "city-validation": "City is required.",
+      "field-required": "This field is required.",
+      "zip-required": "ZIP is required.",
+      "first-name-required": "First name is required.",
+      "last-name-required": "Last name is required.",
+      "email-required": "Email is required.",
+      "phone-required": "Phone number is required.",
+      "business-type-required": "Please, Select a field.",
+      "get-taxonomy-error": "Unable to make the request. Please try again later.",
+      "business-search-label": "Search for your primary industry and then select it from the list.",
+      "business-search-placeholder": "Begin typing to show options...",
+      "business-search-type-required": "Please, search for a business type in order to proceed.",
+      "business-search-hint": "i.e. Apartments, Coffee, Medical, Pet Stores, etc",
+      "no-results-prefix": "There are no results for ",
+      "no-result-suffix": ". Please try a different search.",
+      "unable-to-find-industry": "I am unable to find my industry",
+      "select-product": "Select a product to quote.",
+      "unable-to-save": "Unable to save your information. Please try again.",
+      "continue-quote": "Continue Quote",
+      "save-and-exit": "Send Link &amp; Exit",
+      "progress-saved": "Your progress is saved",
+      "link-by-email-prefix": "We will send a link to&nbsp;",
+      "link-by-email-suffix": ".",
+      "use-link-to-continue": "Use the link to pick up where you left off at any time.",
+      "positive-integer": "Must be equal or greater than 0.",
+      "max-percentage-validation": "Value must not be greater than 100%.",
+      "sales-percentage-required": "Percent of sales is required.",
+      "overall-sales=percentage-required": "Percent of overall sales is required.",
+      "fein-required": "FEIN is required.",
+      "own-building-prefix": "Do you own the building at ",
+      "own-building-suffix": "?",
+      "processing-error": "There was an error processing your request. Please try again.",
+      "more-questions-business": "We need to ask you for more information about your business.",
+      "more-questions-employees": "We need to ask you for more information about your employees.",
+      "more-questions-property": "We need to ask you for more information about your business location."
    }
 }
