Refactored and translated the steps

--- a/client-extensions/raylife-custom-element/src/common/locale/en.json
+++ b/client-extensions/raylife-custom-element/src/common/locale/en.json
@@ -62,6 +62,53 @@
       "more-questions-employees": "We need to ask you for more information about your employees.",
       "more-questions-property": "We need to ask you for more information about your business location.",
       "previous": "Previous",
-      "continue": "Continue"
+      "continue": "Continue",
+      "business-annual-gross-revenue": "What is your estimated annual gross revenue for the next 12 months?",
+      "business-email": "Business Email",
+      "business-federal-employer-identification-number": "Does your business have a Federal Employer Identification Number (FEIN)?",
+      "business-website": "Business Website (optional)",
+      "business-year-operation": "Does your business operate year round?",
+      "city": "City",
+      "diving-boards": "Are there diving boards or slides?",
+      "do-you-have-raylife-policy": "Do you have a Raylife Auto policy?",
+      "do-you-own-the-building-at": "Do you own the building at ",
+      "do-you-sell-products-under-own-brand": "Do you sell products under your own brand or label?",
+      "do-you-store-personality-identifiable": "Do you store personally identifiable information about your customers?",
+      "employees-amount": "How many full or part time employees do you have?",
+      "employees-annual-payroll": "What do you anticipate your annual payroll will be for all employees over the next 12 months?",
+      "federal-employer-identification-number": "Federal Employer Identification Number (FEIN)",
+      "first-name": "First Name",
+      "how-many-square-feet-of-the-building": "How many square feet of the building does your business occupy?",
+      "how-many-stories-is-this-building": "How many square feet of the building does your business occupy?",
+      "how-many-total-square-feet-is-the-building": "How many square feet of the building does your business occupy?",
+      "last-name": "Last Name",
+      "legal-entity": "Legal Entity",
+      "owners-annual-payroll": "What do you anticipate your annual payroll will be for all owner(s) over the next 12 months?",
+      "percent-of-sales-from-merchandise": "Percent of sales from used merchandise?",
+      "phone": "Phone",
+      "physical-address": "Physical Address",
+      "physical-business-address": "Physical Business Address",
+      "premises": "Premises",
+      "primary-location": "Is this the primary location where you conduct business?",
+      "state": "State",
+      "swimming-pool": "Are there swimming pool(s) on the premises?",
+      "what-percentage-of-overall-involve-delivery": "What percentage of overall sales involve delivery?",
+      "what-year-was-the-building-constructed": "What year was the building constructed?",
+      "year-business-started": "What year did you start your business?",
+      "year-of-industry-experience": "Years of industry experience?",
+      "your-name": "your name",
+      "zip": "zip",
+      "at-least-one-employee": "You must have at least one employee.",
+      "step-basics-business-information": "Just the business basics!",
+      "step-basics-business-type": "Select a primary industry.",
+      "step-basics-product-quote": "Welcome! Select a product.",
+      "step-business": "Let's get to know your business!",
+      "step-employees": "Tell us about your employees!",
+      "step-property": "More about",
+      "app-object-disabled": "Application object is disabled",
+      "basics": "Basics",
+      "business": "Business",
+      "employees": "Employees",
+      "property": "Property"
    }
 }
