--- a/client-extensions/raylife-custom-element/src/common/locale/es.json
+++ b/client-extensions/raylife-custom-element/src/common/locale/es.json
@@ -1,6 +1,6 @@
 {
    "translation": {
-      "fein-validation": "Por favor, ingrese un FEIN válido.",
+      "fein-validation": "Por favor ingrese un FEIN válido.",
       "phone-validation": "Debe ser un número de teléfono válido.",
       "future-year-validation": "No puede ingresar un año futuro.",
       "year-validation": "Debe ser un año válido.",
@@ -11,9 +11,9 @@
       "more-info-label": "Más Información",
       "yes": "Sí",
       "no": "No",
-      "per-occurrence-limit": "Límite por incidente",
+      "per-occurrence-limit": "Límite por ocurrencia",
       "aggregate-limit": "Límite agregado",
-      "business-personal-property": "Propiedad personal de negocio",
+      "business-personal-property": "Propiedad personal del negocio",
       "product-recall-or-replacement": "Retiro o reemplazo de producto",
       "money-and-securities": "Dinero y valores",
       "most-popular": "Más popular",
@@ -22,46 +22,93 @@
       "purchase-this-policy": "COMPRAR ESTA PÓLIZA",
       "policy-details": "Detalles de la póliza",
       "per-month": "/mes",
-      "changes-may-not-be-saved-warning": "Los cambios que ha realizado pueden no ser guardados.",
+      "changes-may-not-be-saved-warning": "Los cambios realizados pueden no guardarse.",
       "street-address": "Dirección",
-      "business-address-validation": "Se requiere dirección comercial.",
+      "business-address-validation": "Se requiere la dirección del negocio.",
       "address-apt": "Apt/Suite (opcional)",
-      "city-validation": "Se requiere ciudad.",
+      "city-validation": "Se requiere la ciudad.",
       "field-required": "Este campo es obligatorio.",
-      "zip-required": "Se requiere código postal.",
-      "first-name-required": "Se requiere nombre.",
-      "last-name-required": "Se requiere apellido.",
-      "email-required": "Se requiere correo electrónico.",
-      "phone-required": "Se requiere número de teléfono.",
+      "zip-required": "Se requiere el código postal.",
+      "first-name-required": "Se requiere el primer nombre.",
+      "last-name-required": "Se requiere el apellido.",
+      "email-required": "Se requiere el correo electrónico.",
+      "phone-required": "Se requiere el número de teléfono.",
       "business-type-required": "Por favor, seleccione un campo.",
-      "get-taxonomy-error": "No se puede realizar la solicitud. Intente nuevamente más tarde.",
-      "business-search-label": "Busque su industria principal y luego seleccione la opción de la lista.",
-      "business-search-placeholder": "Comience a escribir para ver las opciones...",
-      "business-search-type-required": "Por favor, busque un tipo de negocio para continuar.",
-      "business-search-hint": "por ejemplo, Apartamentos, Café, Medicina, Tiendas de mascotas, etc.",
+      "get-taxonomy-error": "No se pudo realizar la solicitud. Intente de nuevo más tarde.",
+      "business-search-label": "Busque su industria principal y luego selecciónela de la lista.",
+      "business-search-placeholder": "Comience a escribir para mostrar opciones...",
+      "business-search-type-required": "Por favor, busque un tipo de negocio para proceder.",
+      "business-search-hint": "Ej. Apartamentos, Café, Médico, Tiendas de mascotas, etc.",
       "no-results-prefix": "No hay resultados para ",
-      "no-result-suffix": ". Intente una búsqueda diferente.",
+      "no-result-suffix": ". Intente con una búsqueda diferente.",
       "unable-to-find-industry": "No puedo encontrar mi industria",
       "select-product": "Seleccione un producto para cotizar.",
-      "unable-to-save": "No se pudo guardar su información. Intente nuevamente.",
+      "unable-to-save": "No se pudo guardar su información. Intente de nuevo.",
       "continue-quote": "Continuar cotización",
       "save-and-exit": "Enviar enlace y salir",
-      "progress-saved": "Su progreso ha sido guardado",
-      "link-by-email-prefix": "Enviaremos un enlace a&nbsp;",
+      "progress-saved": "Su progreso está guardado",
+      "link-by-email-prefix": "Le enviaremos un enlace a ",
       "link-by-email-suffix": ".",
-      "use-link-to-continue": "Use el enlace para continuar desde donde lo dejó en cualquier momento.",
+      "use-link-to-continue": "Utilice el enlace para continuar donde lo dejó en cualquier momento.",
       "positive-integer": "Debe ser igual o mayor que 0.",
       "max-percentage-validation": "El valor no debe ser mayor al 100%.",
-      "sales-percentage-required": "Se requiere el porcentaje de ventas.",
-      "overall-sales=percentage-required": "Se requiere el porcentaje de ventas totales.",
+      "sales-percentage-required": "El porcentaje de ventas es obligatorio.",
+      "overall-sales=percentage-required": "El porcentaje de ventas totales es obligatorio.",
       "fein-required": "El FEIN es obligatorio.",
-      "own-building-prefix": "¿Es propietario del edificio en ",
+      "own-building-prefix": "¿Es dueño del edificio en ",
       "own-building-suffix": "?",
-      "processing-error": "Hubo un error al procesar su solicitud. Intente nuevamente.",
+      "processing-error": "Hubo un error al procesar su solicitud. Intente de nuevo.",
       "more-questions-business": "Necesitamos hacerle más preguntas sobre su negocio.",
       "more-questions-employees": "Necesitamos hacerle más preguntas sobre sus empleados.",
       "more-questions-property": "Necesitamos hacerle más preguntas sobre la ubicación de su negocio.",
-      "previous": "Previo",
-      "continue": "Continuar"
+      "previous": "Anterior",
+      "continue": "Continuar",
+      "business-annual-gross-revenue": "¿Cuál es su estimado de ingresos brutos anuales para los próximos 12 meses?",
+      "business-email": "Correo electrónico del negocio",
+      "business-federal-employer-identification-number": "¿Tiene su negocio un Número de Identificación del Empleador Federal (FEIN)?",
+      "business-website": "Sitio web del negocio (opcional)",
+      "business-year-operation": "¿Opera su negocio durante todo el año?",
+      "city": "Ciudad",
+      "diving-boards": "¿Hay trampolines o toboganes?",
+      "do-you-have-raylife-policy": "¿Tiene una póliza de Raylife Auto?",
+      "do-you-own-the-building-at": "¿Es dueño del edificio en ",
+      "do-you-sell-products-under-own-brand": "¿Vende productos bajo su propia marca o etiqueta?",
+      "do-you-store-personality-identifiable": "¿Almacena información personalmente identificable de sus clientes?",
+      "employees-amount": "¿Cuántos empleados a tiempo completo o parcial tiene?",
+      "employees-annual-payroll": "¿Cuál es su estimación de la nómina anual para todos los empleados durante los próximos 12 meses?",
+      "federal-employer-identification-number": "Número de Identificación del Empleador Federal (FEIN)",
+      "first-name": "Primer nombre",
+      "how-many-square-feet-of-the-building": "¿Cuántos pies cuadrados ocupa su negocio del edificio?",
+      "how-many-stories-is-this-building": "¿Cuántos pisos tiene este edificio?",
+      "how-many-total-square-feet-is-the-building": "¿Cuántos pies cuadrados tiene en total el edificio?",
+      "last-name": "Apellido",
+      "legal-entity": "Entidad legal",
+      "owners-annual-payroll": "¿Cuál es su estimación de la nómina anual para todos los propietarios durante los próximos 12 meses?",
+      "percent-of-sales-from-merchandise": "¿Porcentaje de ventas provenientes de mercancías usadas?",
+      "phone": "Teléfono",
+      "physical-address": "Dirección física",
+      "physical-business-address": "Dirección física del negocio",
+      "premises": "Instalaciones",
+      "primary-location": "¿Es este el lugar principal donde realiza su negocio?",
+      "state": "Estado",
+      "swimming-pool": "¿Hay piscina(s) en las instalaciones?",
+      "what-percentage-of-overall-involve-delivery": "¿Qué porcentaje de las ventas totales involucra entrega?",
+      "what-year-was-the-building-constructed": "¿En qué año se construyó el edificio?",
+      "year-business-started": "¿En qué año comenzó su negocio?",
+      "year-of-industry-experience": "¿Años de experiencia en la industria?",
+      "your-name": "su nombre",
+      "zip": "código postal",
+      "at-least-one-employee": "Debe tener al menos un empleado.",
+      "step-basics-business-information": "¡Solo lo básico del negocio!",
+      "step-basics-business-type": "Seleccione una industria principal.",
+      "step-basics-product-quote": "¡Bienvenido! Seleccione un producto.",
+      "step-business": "¡Conozcamos su negocio!",
+      "step-employees": "¡Cuéntenos sobre sus empleados!",
+      "step-property": "Más sobre",
+      "app-object-disabled": "El objeto de la aplicación está deshabilitado",
+      "basics": "Lo básico",
+      "business": "Negocio",
+      "employees": "Empleados",
+      "property": "Propiedad"
    }
 }
