--- a/client-extensions/raylife-custom-element/src/common/locale/en.json
+++ b/client-extensions/raylife-custom-element/src/common/locale/en.json
@@ -118,6 +118,7 @@
       "limited-liability-company": "Limited Liability Company (LLC)",
       "limited-liability-partnership": "Limited Liability Partnership (LLP)",
       "partnership": "Partnership",
-      "professional-corporation": "Professional Corporation (PC)"
+      "professional-corporation": "Professional Corporation (PC)",
+      "select": "Select"
    }
 }
