--- a/client-extensions/raylife-custom-element/src/common/locale/en.json
+++ b/client-extensions/raylife-custom-element/src/common/locale/en.json
@@ -138,7 +138,9 @@
       "locality": "Locality",
       "county": "County",
       "county-validation": "County is required",
+      "postcode": "Postcode",
       "date-of-birth": "Date of Birth",
+      "dob-hint": "DD/MM/YYYY",
       "must-be-thirteen-or-over": "You must be at least 13 to accept the terms.",
       "acceptance-statement": "I accept the terms and conditions.",
       "terms-and-conditions": "Terms and Conditions",
