--- a/client-extensions/raylife-custom-element/src/common/locale/es.json
+++ b/client-extensions/raylife-custom-element/src/common/locale/es.json
@@ -8,13 +8,13 @@
       "email-validation": "Debe ser una dirección de correo electrónico válida.",
       "website-validation": "Debe ser una dirección de sitio web válida.",
       "state-validation": "Debe ser una palabra de dos letras.",
-      "more-info-label": "Más Información",
+      "more-info-label": "Más información",
       "yes": "Sí",
       "no": "No",
       "per-occurrence-limit": "Límite por ocurrencia",
       "aggregate-limit": "Límite agregado",
-      "business-personal-property": "Propiedad personal del negocio",
-      "product-recall-or-replacement": "Retiro o reemplazo de producto",
+      "business-personal-property": "Propiedad personal comercial",
+      "product-recall-or-replacement": "Recuerdo o reemplazo de productos",
       "money-and-securities": "Dinero y valores",
       "most-popular": "Más popular",
       "minimum-payment-of": "Pago mínimo de",
@@ -22,82 +22,82 @@
       "purchase-this-policy": "COMPRAR ESTA PÓLIZA",
       "policy-details": "Detalles de la póliza",
       "per-month": "/mes",
-      "changes-may-not-be-saved-warning": "Los cambios realizados pueden no guardarse.",
+      "changes-may-not-be-saved-warning": "Es posible que los cambios que realizó no se guarden.",
       "street-address": "Dirección",
-      "business-address-validation": "Se requiere la dirección del negocio.",
+      "business-address-validation": "Se requiere dirección comercial.",
       "address-apt": "Apt/Suite (opcional)",
-      "city-validation": "Se requiere la ciudad.",
+      "city-validation": "Se requiere ciudad.",
       "field-required": "Este campo es obligatorio.",
-      "zip-required": "Se requiere el código postal.",
-      "first-name-required": "Se requiere el primer nombre.",
-      "last-name-required": "Se requiere el apellido.",
-      "email-required": "Se requiere el correo electrónico.",
-      "phone-required": "Se requiere el número de teléfono.",
+      "zip-required": "Se requiere código postal.",
+      "first-name-required": "Se requiere nombre.",
+      "last-name-required": "Se requiere apellido.",
+      "email-required": "Se requiere correo electrónico.",
+      "phone-required": "Se requiere número de teléfono.",
       "business-type-required": "Por favor, seleccione un campo.",
-      "get-taxonomy-error": "No se pudo realizar la solicitud. Intente de nuevo más tarde.",
+      "get-taxonomy-error": "No se puede realizar la solicitud. Por favor, intente nuevamente más tarde.",
       "business-search-label": "Busque su industria principal y luego selecciónela de la lista.",
       "business-search-placeholder": "Comience a escribir para mostrar opciones...",
-      "business-search-type-required": "Por favor, busque un tipo de negocio para proceder.",
+      "business-search-type-required": "Por favor, busque un tipo de negocio para continuar.",
       "business-search-hint": "Ej. Apartamentos, Café, Médico, Tiendas de mascotas, etc.",
       "no-results-prefix": "No hay resultados para ",
-      "no-result-suffix": ". Intente con una búsqueda diferente.",
+      "no-result-suffix": ". Por favor intente una búsqueda diferente.",
       "unable-to-find-industry": "No puedo encontrar mi industria",
       "select-product": "Seleccione un producto para cotizar.",
-      "unable-to-save": "No se pudo guardar su información. Intente de nuevo.",
+      "unable-to-save": "No se pudo guardar su información. Por favor, intente nuevamente.",
       "continue-quote": "Continuar cotización",
       "save-and-exit": "Enviar enlace y salir",
       "progress-saved": "Su progreso está guardado",
-      "link-by-email-prefix": "Le enviaremos un enlace a ",
+      "link-by-email-prefix": "Enviaremos un enlace a ",
       "link-by-email-suffix": ".",
-      "use-link-to-continue": "Utilice el enlace para continuar donde lo dejó en cualquier momento.",
+      "use-link-to-continue": "Utilice el enlace para continuar desde donde lo dejó en cualquier momento.",
       "positive-integer": "Debe ser igual o mayor que 0.",
       "max-percentage-validation": "El valor no debe ser mayor al 100%.",
-      "sales-percentage-required": "El porcentaje de ventas es obligatorio.",
-      "overall-sales=percentage-required": "El porcentaje de ventas totales es obligatorio.",
-      "fein-required": "El FEIN es obligatorio.",
+      "sales-percentage-required": "Se requiere el porcentaje de ventas.",
+      "overall-sales=percentage-required": "Se requiere el porcentaje de ventas totales.",
+      "fein-required": "Se requiere FEIN.",
       "own-building-prefix": "¿Es dueño del edificio en ",
       "own-building-suffix": "?",
-      "processing-error": "Hubo un error al procesar su solicitud. Intente de nuevo.",
+      "processing-error": "Hubo un error procesando su solicitud. Por favor, intente nuevamente.",
       "more-questions-business": "Necesitamos hacerle más preguntas sobre su negocio.",
       "more-questions-employees": "Necesitamos hacerle más preguntas sobre sus empleados.",
       "more-questions-property": "Necesitamos hacerle más preguntas sobre la ubicación de su negocio.",
       "previous": "Anterior",
       "continue": "Continuar",
-      "business-annual-gross-revenue": "¿Cuál es su estimado de ingresos brutos anuales para los próximos 12 meses?",
+      "business-annual-gross-revenue": "¿Cuál es su ingreso bruto anual estimado para los próximos 12 meses?",
       "business-email": "Correo electrónico del negocio",
-      "business-federal-employer-identification-number": "¿Tiene su negocio un Número de Identificación del Empleador Federal (FEIN)?",
+      "business-federal-employer-identification-number": "¿Su negocio tiene un número de identificación del empleador federal (FEIN)?",
       "business-website": "Sitio web del negocio (opcional)",
-      "business-year-operation": "¿Opera su negocio durante todo el año?",
+      "business-year-operation": "¿Su negocio opera todo el año?",
       "city": "Ciudad",
       "diving-boards": "¿Hay trampolines o toboganes?",
       "do-you-have-raylife-policy": "¿Tiene una póliza de Raylife Auto?",
       "do-you-own-the-building-at": "¿Es dueño del edificio en ",
       "do-you-sell-products-under-own-brand": "¿Vende productos bajo su propia marca o etiqueta?",
-      "do-you-store-personality-identifiable": "¿Almacena información personalmente identificable de sus clientes?",
+      "do-you-store-personality-identifiable": "¿Almacena información personal identificable sobre sus clientes?",
       "employees-amount": "¿Cuántos empleados a tiempo completo o parcial tiene?",
-      "employees-annual-payroll": "¿Cuál es su estimación de la nómina anual para todos los empleados durante los próximos 12 meses?",
-      "federal-employer-identification-number": "Número de Identificación del Empleador Federal (FEIN)",
-      "first-name": "Primer nombre",
-      "how-many-square-feet-of-the-building": "¿Cuántos pies cuadrados ocupa su negocio del edificio?",
+      "employees-annual-payroll": "¿Cuál es su nómina anual anticipada para todos los empleados durante los próximos 12 meses?",
+      "federal-employer-identification-number": "Número de identificación del empleador federal (FEIN)",
+      "first-name": "Nombre",
+      "how-many-square-feet-of-the-building": "¿Cuántos pies cuadrados ocupa su negocio en el edificio?",
       "how-many-stories-is-this-building": "¿Cuántos pisos tiene este edificio?",
-      "how-many-total-square-feet-is-the-building": "¿Cuántos pies cuadrados tiene en total el edificio?",
+      "how-many-total-square-feet-is-the-building": "¿Cuántos pies cuadrados tiene el edificio en total?",
       "last-name": "Apellido",
       "legal-entity": "Entidad legal",
-      "owners-annual-payroll": "¿Cuál es su estimación de la nómina anual para todos los propietarios durante los próximos 12 meses?",
-      "percent-of-sales-from-merchandise": "¿Porcentaje de ventas provenientes de mercancías usadas?",
+      "owners-annual-payroll": "¿Cuál es la nómina anual anticipada para todos los propietarios durante los próximos 12 meses?",
+      "percent-of-sales-from-merchandise": "¿Porcentaje de ventas de mercancías usadas?",
       "phone": "Teléfono",
       "physical-address": "Dirección física",
       "physical-business-address": "Dirección física del negocio",
-      "premises": "Instalaciones",
-      "primary-location": "¿Es este el lugar principal donde realiza su negocio?",
+      "premises": "Local",
+      "primary-location": "¿Es esta la ubicación principal donde realiza su negocio?",
       "state": "Estado",
-      "swimming-pool": "¿Hay piscina(s) en las instalaciones?",
-      "what-percentage-of-overall-involve-delivery": "¿Qué porcentaje de las ventas totales involucra entrega?",
+      "swimming-pool": "¿Hay piscina(s) en el local?",
+      "what-percentage-of-overall-involve-delivery": "¿Qué porcentaje de las ventas totales implica entrega?",
       "what-year-was-the-building-constructed": "¿En qué año se construyó el edificio?",
       "year-business-started": "¿En qué año comenzó su negocio?",
       "year-of-industry-experience": "¿Años de experiencia en la industria?",
-      "your-name": "su nombre",
-      "zip": "código postal",
+      "your-name": "Su nombre",
+      "zip": "Código postal",
       "at-least-one-employee": "Debe tener al menos un empleado.",
       "step-basics-business-information": "¡Solo lo básico del negocio!",
       "step-basics-business-type": "Seleccione una industria principal.",
@@ -113,12 +113,38 @@
       "search": "Buscar",
       "association": "Asociación",
       "corporation": "Corporación",
-      "individual": "Individual/Propietario único",
+      "individual": "Individuo/Sole Proprietor",
       "joint-venture": "Empresa conjunta",
-      "limited-liability-company": "Compañía de responsabilidad limitada (LLC)",
-      "limited-liability-partnership": "Sociedad de responsabilidad limitada (LLP)",
+      "limited-liability-company": "Compañía de Responsabilidad Limitada (LLC)",
+      "limited-liability-partnership": "Sociedad de Responsabilidad Limitada (LLP)",
       "partnership": "Sociedad",
-      "professional-corporation": "Corporación profesional (PC)",
-      "select": "Seleccionar"
+      "professional-corporation": "Corporación Profesional (PC)",
+      "select": "Seleccionar",
+      "personal": "Personal",
+      "address": "Dirección",
+      "terms": "Términos",
+      "step-personal": "Conozcámonos",
+      "step-address": "Cuéntenos dónde vive",
+      "step-terms": "Tratemos lo legal",
+      "email": "Correo electrónico",
+      "forname": "Nombre",
+      "surname": "Apellido",
+      "salutation": "Título",
+      "forename-required": "El nombre es obligatorio.",
+      "forname-required": "El apellido es obligatorio.",
+      "address-validation": "Se requiere nombre/número de casa y calle.",
+      "postcode-validation": "Se requiere código postal.",
+      "postcode-uk-validation": "Ingrese un código postal del Reino Unido válido.",
+      "locality": "Localidad",
+      "county": "Condado",
+      "county-validation": "El condado es obligatorio",
+      "postcode": "Código postal",
+      "date-of-birth": "Fecha de nacimiento",
+      "dob-hint": "DD/MM/YYYY",
+      "must-be-thirteen-or-over": "Debe tener al menos 13 años para aceptar los términos.",
+      "acceptance-statement": "Acepto los términos y condiciones.",
+      "terms-and-conditions": "Términos y condiciones",
+      "acceptance-validation": "Debe aceptar los términos y condiciones.",
+      "example-object-disabled": "El objeto de ejemplo está deshabilitado"
    }
 }
