--- a/client-extensions/raylife-custom-element/src/common/locale/es.json
+++ b/client-extensions/raylife-custom-element/src/common/locale/es.json
@@ -145,6 +145,7 @@
       "acceptance-statement": "Acepto los términos y condiciones.",
       "terms-and-conditions": "Términos y condiciones",
       "acceptance-validation": "Debe aceptar los términos y condiciones.",
-      "example-object-disabled": "El objeto de ejemplo está deshabilitado"
+      "example-object-disabled": "El objeto de ejemplo está deshabilitado",
+      "uk-date-validation": "La fecha debe estar en formato DD/MM/AAAA."
    }
 }
